[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/control/firepit.gd" type="Script" id=2]
[ext_resource path="res://scenes/control/dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://img/firepitVer2.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 63.0079

[node name="firepit" type="Position2D"]
script = ExtResource( 2 )

[node name="firepitVer2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 4 )

[node name="firepitCenterArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="firepitCenterArea"]
shape = SubResource( 1 )

[node name="dialog" parent="." instance=ExtResource( 3 )]
margin_left = -204.953
margin_top = 110.377
margin_right = -164.953
margin_bottom = 150.377

[connection signal="body_entered" from="firepitCenterArea" to="." method="_on_firepitCenterArea_body_entered"]
[connection signal="body_exited" from="firepitCenterArea" to="." method="_on_firepitCenterArea_body_exited"]
